# poetit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
poedit/: __main__.py  app.py
poedit/data/: rdict.js  th_en_US_new.js
poetit/: __main__.py  app.py  linguistics.py  popups.py
