[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetit"
version = "0.1.0"
description = "Poetry editor with meter analysis, rhyme lookup, thesaurus, and dependency diagrams"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "nltk>=3.8",
    "prosodic>=3.0",
    "spacy>=3.8",
    "resvg_py>=0.3",
    "Pillow>=9.0",
    "dulwich>=0.22",
]

[project.scripts]
poetit = "poetit.app:main"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["."]
include = ["poetit", "poetit.*"]

[tool.setuptools.package-data]
"poetit" = ["data/*.js", "data/*.dict", "data/corpora/*.zip"]
