[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poetit"
version = "0.1.0"
description = "Desktop poetry editor with meter analysis, rhyme lookup, thesaurus, and version control"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ron Hinchley", email = "commuted@gmail.com" },
]
keywords = ["poetry", "editor", "meter", "rhyme", "linguistics", "tkinter", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage    = "https://github.com/commuted/poetit"
Repository  = "https://github.com/commuted/poetit"
"Bug Tracker" = "https://github.com/commuted/poetit/issues"

# CMUDict and WordNet are bundled; no separate NLTK data download required.
# After install, run: python -m spacy download en_core_web_md
dependencies = [
    "nltk>=3.8",
    "prosodic>=3.0",
    "spacy>=3.8",
    "resvg_py>=0.3",
    "Pillow>=9.0",
    "dulwich>=0.22",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest>=8.0"]

[project.scripts]
poetit = "poetit.app:main"

[project.gui-scripts]
poetit-gui = "poetit.app:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["poetit", "poetit.*"]

[tool.setuptools.package-data]
"poetit" = [
    "data/*.js",
    "data/*.dict",
    "data/*.png",
    "data/*.desktop",
    "data/corpora/*.zip",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
